--- a/jenkinsfile
+++ b/jenkinsfile
@@ -8,6 +8,8 @@ pipeline {
 
     stages {
         stage('Clone Repository') {
+
+--- this is git hub file---
             steps {
                 // Clone the Git repository
                 git 'https://github.com/your-username/your-repository.git'
